syntax = "proto3";

package whiterabbit.journal;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message Journal {
  string id = 1;
  google.protobuf.Timestamp createdDate = 2;
  string name = 3;
  string description = 4;
  string unit = 5;
  repeated string tags = 6;
}

message JournalQuery {
  repeated string id = 1;
  repeated string name = 2;
  string unit = 3;
  repeated string tags = 4;
  string fullText = 5;
}

message JournalsResponse {
  repeated Journal values = 1;
}

message JournalResponse {
  Journal value = 1;
}

service JournalService {
  rpc FindAll(JournalQuery) returns (JournalsResponse);
  rpc FindById(google.protobuf.StringValue) returns (Journal);
}